# RISEAPP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/sql/: riseapp.db-journal
exception/: custom_exception.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  ChunkItem.tsx  ChunkList.tsx  ComparePage.tsx  DocumentPane.tsx  style.css  types.ts
logger/: __init__.py  custom_logger.py
scripts/: verify_setup.py
src/agents/: __init__.py
src/agents/brand_agent/: __init__.py  agent.py
src/agents/lineage_detect_agent/: __init__.py  agent.py
src/agents/prompts/: README.md  __init__.py  brand_classifier_classify.md  brand_classifier_system.md  brand_validation_system.md  lineage_detect_match.md  lineage_detect_system.md  validation_validate.md
src/api/: __init__.py  app.py
src/chunking/: __init__.py  chunker.py
src/db/: __init__.py  connection.py  repositories.py
src/embedding/: __init__.py  base.py  factory.py  google_embedding.py  huggingface_embedding.py
src/processes/: __init__.py  process_1_convert.py  process_2_chunk_store.py  process_3_lineage.py
src/vectordb/: __init__.py  faiss_store.py
static/: index.html
static/compare/: index.html
static/compare/assets/: index-DZmym9MB.css  index-rZqV4DHF.js
static/css/: style.css
static/js/: app.js
test/: .process1_test.db-journal  conftest.py  test_api.py  test_chunker.py  test_db.py  test_embedding.py  test_process_1.py  test_vectordb.py
utils/: __init__.py  config.py  file_io.py
(+3 files in other folders)
